--- a/index.html
+++ b/index.html
@@ -1,33 +1,62 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <head>
-    <meta charset="utf-8">
-    <title>My Test Page</title>
-	
-	<link href="styles/style.css" rel="stylesheet" type="text/css">
-	<link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet" type="text/css">   
-  </head>
-  
-  <body>
-	<h1>Test Site</h1>
-	
-    <img src="images/where-is-my-money.gif" alt="Where is my money from The Simpsons.">
-	<p>A <strong>VERY</strong> basic page to practice web site building.</p>
-	
-	<p>This site will test how a browser handle a mouse, such as</p>
+  <title>Startup</title>
 
-	<ul>
-		<li>click down behaviors</li>
-		<li>mouse move tick rate when a button is hold down</li>
-		<li>use mouse to draw simple lines and dots</li>
-	</ul>
-	
-	<p>The idea comes from <a href="https://addons.mozilla.org/zh-TW/firefox/addon/grab-and-drag/">here</a>.</p>
-	
-	<button>Change user</button>
-	<script src="scripts/main.js"></script>
-  </body>
-  
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+
+  <!-- Custom Stylesheet -->
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <header class="startup d-flex text-center text-white">
+    <div class="container my-auto">
+      <div class="row">
+        <div class="col-lg-12 my-auto heading">
+          <h1 class="text-uppercase faded-white">
+            <strong>the start of a new era</strong>
+          </h1>
+          <hr>
+        </div>
+        <div class="col-lg-12 my-auto">
+          <!-- Begin MailChimp Signup Form -->
+          <div id="mc_embed_signup">
+            <form action="https://bugshell.us19.list-manage.com/subscribe/post?u=df68e9988da6c587e22ed956e&amp;id=52fdf08587" method="post"
+              id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div id="mc_embed_signup_scroll">
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                  <input type="text" name="b_df68e9988da6c587e22ed956e_52fdf08587" tabindex="-1" value="">
+                </div>
+                <div class="clear">
+                  <input type="submit" value="find out more" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary btn-custom">
+                </div>
+              </div>
+            </form>
+          </div>
+          <!--End mc_embed_signup-->
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
